--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,26 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Sunday June 18th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Still working through the kinks in positioning, when coming upon irregular chunks of css in CSS grid. Discovering through experimentation lots of versatility in linear-gradients in order to depict an element "accepting" shadow from another element. It has a very nice, subtle effect if done properly.
+
+  Planning on an intro to this project where the browser makes an http request that is denied and the resulting img "error" becomes part of the animation. (#OHDudeThatsSoMeta...) Screen flckers, intro plays slow jazzz dirge-like horns for 5sec over the sound of rain...until error... This will become a "click to start animation" event.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 12days</span><em>(by July 1st)</em>
+    <li>White house roof shingles</li>
+    <li>facade of white house touch-up</li>
+    <li>If there's time, I'll work on short house (col 5) starting with the roof</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> positioning on white house roof shingles. It's a rotated image, so I need to solve some problems with angles</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Saturday June 17th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Great progress yesterday. The difference in shadows cast by css from those cast by SVG are something I need to look into. I need to choreograph(?) or plan out the animation and syncronizing with audio events.<br /><br /> I need to start thinking about an MVP and finish ahead of sched. Then, iterate over and over.</h3>
@@ -34,7 +54,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Finished roof patterns on right gable</li>
+    <li>Finished many improvements on entire facade of peach house, steps & foundation</li>
   </ol>
   <hr />
   <h2 class="date">Friday June 16th, 2017</h2>
@@ -126,12 +147,13 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Outline completed</li>
+    <li>Sass integration remains undone.</li>
   </ol>
   <hr />
   <h2 class="date">Sunday June 11th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
-  <h3 class="subtitle">Well into CSS grid & finding it a joy. Today's word is <a target="_blank" href="https://en.wikipedia.org/wiki/Duende_(art)">duende</a> <em class="bold">n.</em> I have much to reflect on, but no time. --Project due July 7th using Grid & SVG to paint a row of houses. <img class="w10" src="./img/norleans.jpg" alt="New Orleans House"> <br>
+  <h3 class="subtitle">Well into CSS grid & finding it a joy. Today's word is <a target="_blank" href="https://en.wikipedia.org/wiki/Duende_(art)">duende</a> <em class="bold">n.</em> I have much to reflect on, but no time. --Project due July 7th using Grid & SVG to paint a row of houses. I will set up repo soon <br>
   It's an absolutely hair-brained idea. :) Will have to map out, in detail, the outline and fill in gaps. Perhaps relative units to make it responsive. Perhaps SVG for the tricky stuff like deck-railing and house-gutters. And, so... Let's continue with the CSS Grid revisit.</h3>
   <br><blockquote class="w40 right">"We choose to learn CSS Grid this month and the other things--Not because they are easy, but because we thought they would be easy..."</blockquote>
   <cite class="right sm w40">--J.F. Kennedy <em class="sm">(paraphrased)</em></cite>
@@ -359,7 +381,7 @@ I'm about to get back into GSAP in prep for a foray into some light animation ke
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>many minor entries in ecma.html view</li>
   </ol>
   <hr />
 
