--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -24,7 +24,7 @@
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Still working through the kinks in positioning, when coming upon irregular chunks of css in CSS grid. Discovering through experimentation lots of versatility in linear-gradients in order to depict an element "accepting" shadow from another element. It has a very nice, subtle effect if done properly.
 
-  Planning on an intro to this project where the browser makes an http request that is denied and the resulting img "error" becomes part of the animation. (#OHDudeThatsSoMeta...) Screen flckers, intro plays slow jazzz dirge-like horns for 5sec over the sound of rain...until error... This will become a "click to start animation" event.</h3>
+  <br /><br />Planning on an intro to this project where the browser makes an http request that is denied and the resulting img "error" becomes part of the animation. #meta ;) --Screen flckers, intro plays slow jazz dirge-like horns for 5sec over the sound of rain until <em>error</em>. This will become a "click to start animation" event.</h3>
 
   <br>
   <h3>To do:</h3>
@@ -37,7 +37,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>chiaroscuro rooftop achieved! <img class="w30" src="./img/chiaro.jpg" alt="chiaroscuro pic"></li>
   </ol>
   <hr />
   <h2 class="date">Saturday June 17th, 2017</h2>
