--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,67 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 20th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Lots accomplished last night. --It looks quite nice.
+   <br /> I must keep in mind Safari as well. Test on all browsers!  Start thinking of the tech needed to pull of the animation you want to do for the intro</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 10 days.</span>
+    <li>Complete grids for windows of Brick House</li>
+    <li>Re-factor and complete the short house subgrids including the facade.</li>
+    <li>look for imperfections.</li>
+    <li>Read about svg filtering--or go ahead and do it in illustrator and look at the exported code.</li>
+
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>placeholder</li>
+
+  </ol>
+  <hr />
+
+  <h2 class="date">Day June 20th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Positioning is much easier for me now. <br />
+  <br />. The hack I'm using with text as rendering bricks on a wall ::before content: "III..." seems a bit brittle. #RWD #toocleverbyhalf Got some great ideas for an intro, but economy of expression & telling a story with good timing and well-chosen audio is going to make all the difference.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 10 days.</span>
+    <li>Start subgrids on the 4th (brick-house) column. --Fill those puppies up.</li>
+    <li>Complete the Attic of brick-house</li>
+    <li>SVG clipping mask!</li>
+    <li>Remember... This is all going to break at the least opportune minute... So leave time to refactor all this stuff. Name ids and classes properly to avoid clashes in your CSS!</li>
+    <li><span class="ltred">Potential Blocks: </span>Real Life stuff cutting into the time required. May have to pull an all-nighter</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>SVG DONE! It looks good. Drawn by hand. #oldSchool #😎ThugLife</li>
+    <li>ATTIC DONE! :)</li>
+  </ol>
+  <hr />
+
+  <h2 class="date">Monday June 19th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Lots done on linear-gradients in borders. Completely renamed every class in my CSS Grid project</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 11 days.</span>
+    <li>Look into more clipping in css--and see if we can't fix the problems with Firefox compatibility.</li>
+    <li>clean up Sass files.</li>
+    <li>brainstorm and list what is needed for intro and extro of project.</li>
+    <li><span class="ltred">Potential Blocks:</span> None, Baby!</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Studied clipping in svg. It looks a bit too slick. --Problems exist applying a filter on a css element --rather than on an image.</li>
+    <li>Lots and lots of subgridding--The project is ahead of schedule and looking good</li>
+  </ol>
+  <hr />
   <h2 class="date">Sunday June 18th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Still working through the kinks in positioning, when coming upon irregular chunks of css in CSS grid. Discovering through experimentation lots of versatility in linear-gradients in order to depict an element "accepting" shadow from another element. It has a very nice, subtle effect if done properly.
