--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,8 +20,26 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Day June 20th, 2017</h2>
-  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h2 class="date">Thursday June NUMth, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Felt the burnout yesterday and today... RL tasks are getting in the way. Not much progress. Took a break and saw all of 'Maiden's Tale" last night. Wedding trip this weekend. --Have to get a suit.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus Xdays until launch.</span>
+    <li>Buy a suit</li>
+    <li>check the border shadows.</li>
+    <li>try to get to the white house roof</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> Decided to go with something less ambitious for this project. I have not much time to do what I wanted to.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Wednesday June 21st, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Lots accomplished last night. --It looks quite nice.
    <br /> I must keep in mind Safari as well. Test on all browsers!  Start thinking of the tech needed to pull of the animation you want to do for the intro</h3>
 
@@ -33,16 +51,17 @@
     <li>look for imperfections.</li>
     <li>Read about svg filtering--or go ahead and do it in illustrator and look at the exported code.</li>
 
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> must deprioritize finest details and budget time wisely. (As of yet no work done on animation)</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>placeholder</li>
+    <li>Completed entire brick house subgrids minus the doors on 1st floor</li>
+    <li>figured out a way to reduce DOM elements using background (grid-gap) and borders of equal thickness --I will try to apply this to roof</li>
 
   </ol>
   <hr />
 
-  <h2 class="date">Day June 20th, 2017</h2>
+  <h2 class="date">Tuesday June 20th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Positioning is much easier for me now. <br />
   <br />. The hack I'm using with text as rendering bricks on a wall ::before content: "III..." seems a bit brittle. #RWD #toocleverbyhalf Got some great ideas for an intro, but economy of expression & telling a story with good timing and well-chosen audio is going to make all the difference.</h3>
