--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,9 +20,45 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Day June 24th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">I feel good. I'm progressing. That is all. In just a couple of weeks, i've come quite far. It's difficult...but progress comes exponentially and skill development comes along with it. Focus!</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 7</span>
+    <li>White House roof and clipping masks for both dark house and white house roof.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> Clipping is a PITA to learn--but I've already done it. So it will be easier this time, dammit.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
+  <h2 class="date">Friday June 23rd, 2017</h2>
+      <h4 class="sleep">Slept: 7 hours</h4><br><br>
+      <h3 class="subtitle">Don't know what all that negativity was about yesterday. I pushed through it & went methodically through each bit that I had to accomplish. It's starting to look better.<br /><br />
+      The more complex, the more kinks I have to work out. But they are less scary... Simply working on the project is teaching me. I completed the brick front doors and they are lookin' sweet.</h3>
+
+      <br>
+      <h3>To do:</h3>
+      <ol class="todo"><span class="ltred">T-minus 8days</span>
+        <li>Dark-house front door</li>
+        <li>white-house-roof</li>
+        <li></li>
+        <li><span class="ltred">Potential Blocks:</span>clipping woes</li>
+      </ol><br>
+      <h3>Done: </h3>
+      <ol class="done">
+        <li>Dark-house is 99% done. It took many hours.</li>
+      </ol>
+  <hr />
   <h2 class="date">Thursday June NUMth, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
-  <h3 class="subtitle">Felt the burnout yesterday and today... RL tasks are getting in the way. Not much progress. Took a break and saw all of 'Maiden's Tale" last night. Wedding trip this weekend. --Have to get a suit.</h3>
+  <h3 class="subtitle">Felt the burnout yesterday and today after a positioning fiasco. I should've used CSS Grid purely with tinier columns...<br /><br />
+    RL tasks are getting in the way. Not much progress. Took a break and saw all of 'Maiden's Tale" last night. Wedding trip this weekend. --Have to get a suit.</h3>
 
   <br>
   <h3>To do:</h3>
@@ -35,7 +71,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Brick Front doors</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday June 21st, 2017</h2>
