--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,29 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Wednesday July 12th, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Two weeks hiatus. So happy to be back!</h3>
+  <img class="w30" src="./img/origpic.png" alt="Thumbnail of original picture">
+
+  <a target="_blank" href="https://codepen.io/beau_dev/full/rwZPjm/"><img class="w30" src="./img/final_thumb.png" alt="Thumbnail of final result"></a>
+  <h2 class="subtitle">The grid-painting project is done! (it's a bit loud, so adjust your volume 🎵 )</h2><br />
+
+  It was tough, day-in-day-out, 3 weeks of tireless hard work. Learning about clipping masks in css and svg, border linear-gradients, CSS Grid. Illustrator, Photoshop, jQuery, AfterEffects (song edit) It was a wild ride & I'm happy to have participated & to have been short-listed in the finalists which was a real honor.
+  <br>
+  Okay, where were we? --Oh, yeah. es6, node, etc. etc. lol let's get back to it.<br>
+  <h3>To do:</h3>
+  <ol class="todo">
+
+    <li>Back to ES6 and arrow functions entries as well as regular events in raw Javascript</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> focusing on one thing and getting back to building a project to apply what lessons are being learnt</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Day June 24th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">I feel good. I'm progressing. That is all. In just a couple of weeks, i've come quite far. It's difficult...but progress comes exponentially and skill development comes along with it. Focus!</h3>
@@ -33,7 +56,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Clipping masks done. (with some off-set in Mozilla)</li>
   </ol>
   <hr />
 
