--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -9,7 +9,7 @@
 
     <br>
     <h3>To do:</h3>
-    <ol class="todo"><span class="ltred">T-minus Xdays until launch.</span>
+    <ol class="todo">
       <li>PlaceholderForTasks</li>
       <li></li>
       <li><span class="ltred">Potential Blocks:</span></li>
@@ -20,6 +20,25 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Thursday July 13th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">TASK: Really understand Event Delegation. Do minor Delegation projects & entry in javascript portion of this app. Event Object & methods for DOM traversal.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Event Delegation Review</li>
+    <li>DOM Traversal</li>
+    <li><span class="ltred">Potential Blocks:</span> None</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li><a class="w20" href="https://codepen.io/beau_dev/full/NgJNEO/" target="_blank">Here<h4>a pen illustrating the powers of the event.target property</h4></a></li>
+    <li><a class="w20" href="https://codepen.io/beau_dev/full/PjLGQN/" target="_blank">Here<h4>a pen illustrating the powers of insertBefore, previous/nextSibling, etc.</h4></a></li>
+    <li>The second one above solves an interesting problem using a reference node circumventing the problem of the lack of an "insertAfter" method in raw .js --jQuery DOES have a method solving this quite easily</li>
+    <li><a href="https://stackoverflow.com/questions/4793604/how-to-do-insert-after-in-javascript-without-using-a-library" target="_blank">Here's a Stack Overflow comment on this issue</a></li>
+  </ol>
+  <hr />
   <h2 class="date">Wednesday July 12th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Two weeks hiatus. So happy to be back!</h3>
@@ -33,14 +52,13 @@
   Okay, where were we? --Oh, yeah. es6, node, etc. etc. lol let's get back to it.<br>
   <h3>To do:</h3>
   <ol class="todo">
-
     <li>Back to ES6 and arrow functions entries as well as regular events in raw Javascript</li>
     <li></li>
     <li><span class="ltred">Potential Blocks:</span> focusing on one thing and getting back to building a project to apply what lessons are being learnt</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Went through a great deal of eventhandling. Covering old ground is good for the soul.</li>
   </ol>
   <hr />
   <h2 class="date">Day June 24th, 2017</h2>
