--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,25 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Monday July 17th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">A weekend of volunteering and hard labor. -Gardening, Cooking a stir-fry for seven people & general merry-making. Back to work. Listened to a most excellent podcast <a  target="_blank" href="https://t.co/JEhsbhT6D0"> The Web Ahead with Andy Budd</a> about design/UX/UI etc.</h3>
+  <br /><blockquote  class="w30 softblue ctrtxt ctr brdr-w" target="_blank">Principle No. 50: Fitts’ Law<br />
+The time required to touch a target is a function of the target size and the distance to the target. <br> * * * <br>The law is predictive over a wide variety of conditions, devices, and people.
+The primary implication of Fitts’ law is that close, large targets can be accessed more quickly and with fewer errors than distant, small targets.<cite>  --<a href="http://universalprinciplesofdesign.com/examples/#fitts" >source</a></cite></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>More RAW JS events: review</li>
+    <li>Revisit breakpoints and implimentation --CSS GRID functionality(?) [I seem to remember there's a way inside of a css rule to modify an element with precision for a single bespoke breakpoint]</li>
+    <li><span class="ltred">Potential Blocks:</span> Organized, methodical approach. Too many sources to choose from. Must quickly finish events example and move on...</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li><a href="https://codepen.io/beau_dev/full/JJqJqN/" target="_blank">Raw JS Events review</a> done!</li>
+    <li></li>
+  </ol>
+  <hr />
   <h2 class="date">Thursday July 13th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">TASK: Really understand Event Delegation. Do minor Delegation projects & entry in javascript portion of this app. Event Object & methods for DOM traversal.</h3>
