jquery entry & journal entry

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,7 +3,7 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Day June NUMth, 2017</h2>
+    <h2 class="date">Monday July 17th, 2017</h2>
     <h4 class="sleep">Slept: 7 hours</h4><br><br>
     <h3 class="subtitle">Placeholder</h3>
 
@@ -20,12 +20,32 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday July 18th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Reviewed lots & DISCOVERED lots yesterday. --Still a bit rusty with mastering 'this' (<em>insert favorite expletive here</em>). </h3>
+  <blockquote  class="w30 softblue ctrtxt ctr brdr-w" target="_blank">Inattentional Blindness<br />
+    The failure to cognitively process a stimulus that is
+    presented in clear view, leaving the observer without any
+    awareness or memory of the stimulus.<br> * * * <br /> When it simply becomes impossible for one to attend to all the stimuli in a given situation, a temporary blindness effect can take place as a result; that is, individuals fail to see objects or stimuli that are unexpected and quite often salient.<cite>  --<a target="_blank" href="https://en.wikipedia.org/wiki/Inattentional_blindness" >source</a></cite></blockquote>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Today is about breakpoints!</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Monday July 17th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">A weekend of volunteering and hard labor. -Gardening, Cooking a stir-fry for seven people & general merry-making. Back to work. Listened to a most excellent podcast <a  target="_blank" href="https://t.co/JEhsbhT6D0"> The Web Ahead with Andy Budd</a> about design/UX/UI etc.</h3>
   <br /><blockquote  class="w30 softblue ctrtxt ctr brdr-w" target="_blank">Principle No. 50: Fitts’ Law<br />
 The time required to touch a target is a function of the target size and the distance to the target. <br> * * * <br>The law is predictive over a wide variety of conditions, devices, and people.
-The primary implication of Fitts’ law is that close, large targets can be accessed more quickly and with fewer errors than distant, small targets.<cite>  --<a href="http://universalprinciplesofdesign.com/examples/#fitts" >source</a></cite></blockquote>
+The primary implication of Fitts’ law is that close, large targets can be accessed more quickly and with fewer errors than distant, small targets.<cite>  --<a target="_blank" href="http://universalprinciplesofdesign.com/examples/#fitts" >source</a></cite></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -36,6 +56,7 @@ The primary implication of Fitts’ law is that close, large targets can be acce
   <h3>Done: </h3>
   <ol class="done">
     <li><a href="https://codepen.io/beau_dev/full/JJqJqN/" target="_blank">Raw JS Events review</a> done!</li>
+    <li><a href="https://codepen.io/beau_dev/full/ZyNNxR/" target="_blank">Same code (not using THIS)</a> also done!</li>
     <li></li>
   </ol>
   <hr />
