ecma, emoticon, etc

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,13 +31,15 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>Today is about breakpoints!</li>
+    <li>Today is about breakpoints! using Flex-box first and then CSS Grid. -Modernizer and Autoprefixer (but, hopefully, I won't give those two a workout ;)</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> none</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>The menu versatility in flex-box is amazing. I had forgotten how good it is. Flexbox obviates the need for margins and padding. CSS-Grid obviates the need for width/height. --Love them both.</li>
+    <div class=""><img class="fLeft w10" src="./img/fav1.png" alt="favicon1"><img class="fLeft w10" src="./img/fav2.png" alt="favicon2"><img class="w10 fLeft" src="./img/fav3.png" alt="favicon3"></div>
+    <li>Experimented with favicons & this excellent <a target="_blank" href="http://realfavicongenerator.net/">favicon generator</a> I've decided to go with the 3rd, though I like the first as an icon. Frankly, I don't love the name "Code Journal" at all. lol</li>
   </ol>
   <hr />
   <h2 class="date">Monday July 17th, 2017</h2>
