favicon edit journal entry

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,25 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Thursday July 20th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Took a day away from coding. I ran. Hard, meaningful labor. Watched a terrible film abt Tech Industry: "The Circle"...Then reconnected with <a href="https://frontendmasters.com/" target="_blank">FrontEndMasters</a> Okay. Enough reflection. Let's begin.<br />
+  Today, Goals are. Complete minor project on breakpoints using Flex-box. <br />Oh, BTW... I decided to go with this favicon 4 now<br /><img class="w10" src="./img/fav4.png" alt="favicon4"><br /></h3>
+
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Tuesday July 18th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Reviewed lots & DISCOVERED lots yesterday. --Still a bit rusty with mastering 'this' (<em>insert favorite expletive here</em>). </h3>
