--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,7 +31,7 @@
   <ol class="todo">
     <li>PlaceholderForTasks</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span>"subtractive or additive CSS?" --whether to go with mobile-first design or do more complex layout and then undo those rules as page gets smaller: decisions...decisions...</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
